# Calc-Z-P

./: .gitignore  CMakeLists.txt  Lang_Helper.c  Programm.c  README.md  binaryFuction.c  binaryFunction.c  binaryFunction.h  einfacheBerechnungen.c  einfacheBerechnungen.h  localizedString.c  localizedString.h
ZeLib/: WindowMagaer.c  WindowManager.h  ZThreading.c  ZThreading.h  ZcBase.c  ZcBase.h
